# passwdmgr

./: .gitignore  PasswordManager.spec  README.md  build_appimage.sh  build_arm64.py  build_arm64_qt5.py  build_arm64_qt6.py  build_exe.py  check_menu_icons.py  config.json  helpers.py  main.py  passwdmgr.desktop  password_manager.db  pyproject.toml  requirements.txt  requirements_linux.txt  resources.py  resources.qrc  test_add_dialog.py  test_icons_load.py  test_password_manager.db  test_resources.py
.github/workflows/: build-arm64-appimage.yml
core/: __init__.py  config.json  config_manager.py  database_manager.py  encryption_manager.py  password_generator.py  resource_manager.py  session_manager.py
gui/: __init__.py  add_edit_dialog.bak.py  add_edit_dialog.py  categories_dialog.py  change_master_password_dialog.py  icon_manager.py  login_dialog.py  main_window.py  main_window_bak.py  menu_manager.py  settings_dialog.py
init/: create_database.sql
models/: __init__.py  password_entry.py
resources/css/: detail_style.css
resources/templates/: detail_template.html  example_template.html
test/: __init__.py  test_add_dialog.py  test_encryption.py  test_menu.py  test_resources.py  verify_icons.py
utils/: __init__.py  create_icons_integrated.py  create_windows_icons.py  database_migrate.py  generate_icons.py  setup_resources.py  validators.py
